Add support for field layout of universal canon types and types instantiated over universal canon types - Define new type "LayoutInt" - This type supports a small set of arithmetic operations, (Addition, Max, Min, AlignUp, equality testing) - For safety, addition is implemented as checked arithmetic unconditionally - An arithmetic operation on a number that has an indeterminate value will generally result in another indeterminate value (the sole exception is alignment behavior, where if a value is already aligned maximally (for layout), then aligning to an indeterminate value will preserve the original number - Recast all type layout operations in terms of LayoutInt. - Create a layout algothm for the universal canon type. It is special cased to define its various sizes as indeterminate as appropriate. - Flow these changes through the rest of the product. As most code is supposed to only work with concrete types, the AsInt property is extensively used - Tests for both LayoutInt, and a variety of field layout situations involving universal canon types
[tfs-changeset: 1650408]

--- a/src/ILCompiler.TypeSystem/tests/TypeSystem.Tests.csproj
+++ b/src/ILCompiler.TypeSystem/tests/TypeSystem.Tests.csproj
@@ -49,6 +49,7 @@
     <Compile Include="SyntheticVirtualOverrideTests.cs" />
     <Compile Include="TestMetadataFieldLayoutAlgorithm.cs" />
     <Compile Include="TypeNameParsingTests.cs" />
+    <Compile Include="UniversalGenericFieldLayoutTests.cs" />
     <Compile Include="ValueTypeShapeCharacteristicsTests.cs" />
     <Compile Include="VirtualFunctionOverrideTests.cs" />
     <Compile Include="InstanceFieldLayoutTests.cs" />
