Enabling static fields access for Reflection 1) Adding the StaticsInfoHashtable to track statics regions for compiled types. 2) Writing statics field data to the ReflectionFieldMapNode 3) Improving the IndirectionNode to allow it to point to an inner offset in a target symbol 4) CoreRT runtime support for static fields access 5) Collapsing of field entries in the ReflectionFieldMapNode based on canonicalization

--- a/src/ILCompiler.Compiler/src/ILCompiler.Compiler.csproj
+++ b/src/ILCompiler.Compiler/src/ILCompiler.Compiler.csproj
@@ -177,6 +177,7 @@
     <Compile Include="Compiler\DependencyAnalysis\GCStaticEETypeNode.cs" />
     <Compile Include="Compiler\DependencyAnalysis\GCStaticsNode.cs" />
     <Compile Include="Compiler\DependencyAnalysis\GCStaticDescNode.cs" />
+    <Compile Include="Compiler\DependencyAnalysis\StaticsInfoHashtableNode.cs" />
     <Compile Include="Compiler\DependencyAnalysis\INodeWithCodeInfo.cs" />
     <Compile Include="Compiler\DependencyAnalysis\INodeWithDebugInfo.cs" />
     <Compile Include="Compiler\DependencyAnalysis\ISymbolNode.cs" />
