--- a/src/packaging/netcoreapp/project.json
+++ b/src/packaging/netcoreapp/project.json
@@ -4,6 +4,7 @@
       "dependencies": {
         "Microsoft.Private.CoreFx.NETCoreApp": "4.4.0-preview1-25210-01",
 
+        "System.Memory": "4.4.0-preview1-25210-01",
         "System.Runtime.CompilerServices.Unsafe": "4.4.0-preview1-25210-01",
 
         "Microsoft.NETCore.Native": "2.0.0-beta-25021-03"
