Port SecureString to CoreRT
This change ports the CoreCLR implementation of SecureString over to CoreRT. This was an attempt to create an almost verbatim copy of the CoreCLR SecureString, so that it may be moved to the Shared partition. There are a few differences in SecureString.Windows.cs that have not been resolved.

This required inclusion of a few more Win32 APIs: CryptProtectMemory, WideCharToMultiByte, ZeroMemory, SysAllocStringLen, and SysStringLen. This also required additions to PInvokeMarshal: AllocHGlobal, AllocCoTaskMem, FreeHGlobal, and FreeCoTaskMem. These have also been added to the internal Marshal class in Interop.manual.cs, which just calls the implementations in PInvokeMarshal.

[tfs-changeset: 1650789]

--- a/src/System.Private.CoreLib/src/System.Private.CoreLib.csproj
+++ b/src/System.Private.CoreLib/src/System.Private.CoreLib.csproj
@@ -681,6 +681,23 @@
     <Compile Include="System\DateTime.Windows.cs" />
     <Compile Include="System\Globalization\FormatProvider.FormatAndParse.Windows.cs" />
     <Compile Include="System\Runtime\InteropServices\PInvokeMarshal.Windows.cs" />
+    <Compile Include="System\Security\SecureString.Windows.cs" />
+    <Compile Include="System\Security\SafeBSTRHandle.cs" />
+    <Compile Include="..\..\Common\src\Interop\Windows\crypt32\Interop.CryptProtectMemory.cs">
+      <Link>Interop\Windows\crypt32\Interop.CryptProtectMemory.cs</Link>
+    </Compile>
+    <Compile Include="..\..\Common\src\Interop\Windows\ntdll\Interop.ZeroMemory.cs">
+      <Link>Interop\Windows\ntdll\Interop.ZeroMemory.cs</Link>
+    </Compile>
+    <Compile Include="..\..\Common\src\Interop\Windows\kernel32\Interop.WideCharToMultiByte.cs">
+      <Link>Interop\Windows\kernel32\Interop.WideCharToMultiByte.cs</Link>
+    </Compile>
+    <Compile Include="..\..\Common\src\Interop\Windows\oleaut32\Interop.SysAllocStringLen.cs">
+      <Link>Interop\Windows\oleaut32\Interop.SysAllocStringLen.cs</Link>
+    </Compile>
+    <Compile Include="..\..\Common\src\Interop\Windows\oleaut32\Interop.SysStringLen.cs">
+      <Link>Interop\Windows\oleaut32\Interop.SysStringLen.cs</Link>
+    </Compile>
     <Compile Include="..\..\Common\src\Interop\Windows\mincore\Interop.GetCurrentThreadId.cs">
       <Link>Interop\Windows\mincore\Interop.GetCurrentThreadId.cs</Link>
     </Compile>
@@ -822,6 +839,7 @@
     <Compile Include="System\Globalization\CalendarData.Unix.cs" />
     <Compile Include="System\Globalization\IdnMapping.Unix.cs" />
     <Compile Include="System\Text\Normalization.Unix.cs" />
+    <Compile Include="System\Security\SecureString.Unix.cs" />
     <Compile Include="..\..\Common\src\Interop\Unix\System.Globalization.Native\Interop.Calendar.cs">
       <Link>Interop\Unix\System.Globalization.Native\Interop.Calendar.cs</Link>
     </Compile>
