Move MemberInfo to shared partition
There are really two easy changes here, just
to reduce CR overhead.

- CoreRt side of https://github.com/dotnet/coreclr/pull/10167

- Now that we have the shiny new IsConstructedGenericType
  api, let's use it...

--- a/src/System.Private.CoreLib/src/System.Private.CoreLib.csproj
+++ b/src/System.Private.CoreLib/src/System.Private.CoreLib.csproj
@@ -604,6 +604,7 @@
       <Link>Interop\Windows\mincore\Interop.CLSIDFromProgID.cs</Link>
     </Compile>
     <Compile Condition="'$(TargetsUnix)'=='true'" Include="System\Type.Unix.cs" />
+    <Compile Include="System\TypedReference.cs" />
     <Compile Include="System\TypeUnificationKey.cs" />
     <Compile Include="System\TypeLoadException.cs" />
     <Compile Include="System\UInt16.cs" />
