--- a/src/System.Private.Reflection.Execution/src/System.Private.Reflection.Execution.csproj
+++ b/src/System.Private.Reflection.Execution/src/System.Private.Reflection.Execution.csproj
@@ -33,7 +33,9 @@
 
   <ItemGroup Condition="'$(IsProjectNLibrary)' != 'true'">
     <!-- TODO: Everything but Interop and TypeLoader should be out of the conditional block -->
-    <ProjectReference Include="..\..\System.Private.CoreLib\src\System.Private.CoreLib.csproj" />
+    <ProjectReference Include="$(MSBuildThisFileDirectory)..\System.Private.CoreLib\System.Private.CoreLib.csproj">
+      <Aliases>global,System_Private_CoreLib</Aliases>
+    </ProjectReference>
     <ProjectReference Include="..\..\System.Private.Reflection.Core\src\System.Private.Reflection.Core.csproj" />
     <ProjectReference Include="..\..\System.Private.Reflection.Metadata\src\System.Private.Reflection.Metadata.csproj" />
 
