--- a/src/packaging/uap/project.json
+++ b/src/packaging/uap/project.json
@@ -2,12 +2,13 @@
   "frameworks": {
     "uap10.1": {
       "dependencies": {
-        "System.Diagnostics.Tracing": "4.4.0-beta-24913-02"
+        "System.Diagnostics.Tracing": "4.4.0-beta-24913-02",
+        "runtime.win7-x64-aot.Microsoft.Private.CoreFx.UAP": "4.4.0-beta-25107-03"
       }
     }
   },
 
   "runtimes": {
-    "win10-aot": {},
+    "win7-aot": {},
   }
 }
